--- a/webpack/html-replace-plugin/package.json
+++ b/webpack/html-replace-plugin/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf ./dist && webpack --config build/webpack.config.js",
+    "build:old": "rimraf ./dist && webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.16.0"
+    "html-replace-webpack-plugin": "^2.5.2",
+    "html-webpack-plugin": "^3.2.0",
+    "rimraf": "^2.6.2",
+    "webpack": "^4.16.0",
+    "webpack-cli": "^3.0.8"
   }
 }
